streamlit.log
nohup: ignoring input

  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://172.31.98.197:8501
  External URL: http://121.200.55.163:8501

2026-03-14 00:31:42.445 Please replace `use_container_width` with `width`.

`use_container_width` will be removed after 2025-12-31.

For `use_container_width=True`, use `width='stretch'`. For `use_container_width=False`, use `width='content'`.
2026-03-14 01:20:52.499 Uncaught app execution
Traceback (most recent call last):
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 129, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 689, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/inevitable_dj/RadAI/app.py", line 10, in <module>
    import heatmap
  File "/home/inevitable_dj/RadAI/heatmap.py", line 36
    return cam
    ^^^^^^^^^^
SyntaxError: 'return' outside function
2026-03-14 01:24:41.551 Uncaught app execution
Traceback (most recent call last):
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 129, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 689, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/inevitable_dj/RadAI/app.py", line 10, in <module>
    import heatmap
  File "/home/inevitable_dj/RadAI/heatmap.py", line 36
    return cam
    ^^^^^^^^^^
SyntaxError: 'return' outside function
2026-03-14 01:29:42.832 Uncaught app execution
Traceback (most recent call last):
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 129, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 689, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/inevitable_dj/RadAI/app.py", line 87, in <module>
    abnormal_score = cnn_results["score"]
                     ~~~~~~~~~~~^^^^^^^^^
KeyError: 'score'
2026-03-14 01:34:08.609 Please replace `use_container_width` with `width`.

`use_container_width` will be removed after 2025-12-31.

For `use_container_width=True`, use `width='stretch'`. For `use_container_width=False`, use `width='content'`.
2026-03-14 01:34:08.615 Uncaught app execution
Traceback (most recent call last):
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 129, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "/home/inevitable_dj/RadAI/venv/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 689, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/inevitable_dj/RadAI/app.py", line 155, in <module>
    if top_prediction == "No Finding" and top_prob == 0.0:
       ^^^^^^^^^^^^^^
NameError: name 'top_prediction' is not defined
2026-03-14 01:39:30.604 Please replace `use_container_width` with `width`.

`use_container_width` will be removed after 2025-12-31.

For `use_container_width=True`, use `width='stretch'`. For `use_container_width=False`, use `width='content'`.
